salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Days_Until_Event__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Event__c</fullName>
    <description>Formula: Number of days until the event date. Negative if event has passed.</description>
    <formula>IF(ISBLANK(Event_Date__c), NULL, Event_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>