salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The calculated actual date of the meaningful event (e.g., the wedding date, birthday, trip date)</description>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>