salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <description>Expected end date for time-bound events (e.g., end of trip, wedding day). Events past this date are filtered from the active profile.</description>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>