salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Generated_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Generated_Image_URL__c</fullName>
    <description>URL of the Firefly-generated personalized image for this event</description>
    <label>Generated Image URL</label>
    <type>Url</type>
</CustomField>