salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Journey_Brief__c.field-meta.xml
<CustomField>
    <fullName>Journey_Brief__c</fullName>
    <description>Sanitized summary for marketer review. Generated by agent, excludes raw transcript and PII.</description>
    <label>Journey Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>