salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Journey_Definition_Key__c.field-meta.xml
<CustomField>
    <fullName>Journey_Definition_Key__c</fullName>
    <description>Marketing Cloud journey definition key if a personalized journey was created</description>
    <label>Journey Definition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>