salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Journey_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_Start_Date__c</fullName>
    <description>When the personalized journey should begin. Defaults to capture date for immediate journeys.</description>
    <label>Journey Start Date</label>
    <type>Date</type>
</CustomField>