salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Journey_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Journey_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether a personalized journey has been triggered for this event</description>
    <label>Journey Triggered</label>
    <type>Checkbox</type>
</CustomField>