salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Relative_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Relative_Time_Text__c</fullName>
    <description>The original temporal phrase captured from conversation (e.g., "in two weeks", "next month", "this Saturday")</description>
    <label>Relative Time Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>