salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Suggested_Firefly_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Firefly_Prompt__c</fullName>
    <description>Agent-suggested prompt for generating a personalized Firefly image</description>
    <label>Suggested Firefly Prompt</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>