salesforce/force-app/main/default/objects/Meaningful_Event__c/fields/Suggested_Products__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Products__c</fullName>
    <description>Comma-separated list of Product IDs the agent recommends for this event</description>
    <label>Suggested Products</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>